<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    tools:context=".activities.UsersProfileActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textAlignment="center"
        android:textColor="@color/input_background"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/prir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack"

        tools:layout_editor_absoluteX="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progressBar"-->
        <!--            android:layout_width="@dimen/_25sdp"-->
        <!--            android:layout_height="@dimen/_25sdp"-->
        <!--            android:layout_gravity="center" />-->

        <TextView
            android:id="@+id/textErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:textColor="@color/error"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />


        <View
            android:id="@+id/viewSupporter"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/imageBack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            app:stackFromEnd="true"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/viewBackground"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter" />




        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageUserProfile"
            android:layout_width="@dimen/_205sdp"
            android:layout_height="@dimen/_165sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tvFio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_262sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/fio_placeholder"
            android:textColor="@color/text_placeholder_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textUserFio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_280sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background_input"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_298sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/position_placeholder"
            android:textColor="@color/text_placeholder_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textUserPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_315sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background_input"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tvDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_333sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/department_placeholder"
            android:textColor="@color/text_placeholder_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textUserDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_350sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background_input"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_368sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/email_placeholder"
            android:textColor="@color/text_placeholder_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_385sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background_input"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_403sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/phone_placeholder"
            android:textColor="@color/text_placeholder_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_420sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background_input"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_439sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/branch_placeholder"
            android:textColor="@color/text_placeholder_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textUserBranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_455sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background_input"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/viewBackground"
            app:layout_constraintTop_toBottomOf="@id/viewSupporter"
            app:stackFromEnd="true" />


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>













